--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first website</title>
+    <meta charset="utf-8">
+    <title>Rainydays website</title>
   </head>
   <body>
+    <header>
+      <a href="index.html">
+      <img src="images/logo.png" alt="rainydays logo">
+    </a>
+    <nav>
+      <ul>
+        <li><a href="men.html">Men</a></li>
+        <li><a href="men.html">Women</a></li>
+        <li><a href="men.html">Unisex</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+    </header>
     <h1>Hello world!</h1>
     <p>Welcome to my first website.</p>
   </body>
 </html>
+ 
