--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Rainydays website</title>
+    <meta name="description" content="The home page for Rainydays">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Quattrocento&family=Quattrocento+Sans&display=swap" rel="stylesheet">
+    <!--Link to CSS file-->
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
     <header>
@@ -18,8 +26,73 @@
       </ul>
     </nav>
     </header>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
+    <main>
+      <section>
+        <div>
+          <img src="">
+          <p><a class="cta" href="men.html">Shop Men</a></p>
+        </div>
+        <div>
+          <img src="">
+          <p><a class="cta" href="men.html">Shop Women</a></p>
+        </div>
+      </section>
+      <section>
+        <h1>100% waterproof</h1>
+        <h2>High durability and comfort</h2>
+        <p>Rainydays' jackets are coated to be sustain high amount of rain and snow, 
+          without loosing the comforting feel of wearing the jacket.</p>
+        <a class="" href="about.html">Learn More</a>
+      </section>
+      <section>
+        <h2>Best Sellers</h2>
+        <div>
+          <img src="">
+          <h3>Coastal Rain 02</h3>
+          <!--Image favorite?-->
+          <p>1 999 NOK</p>
+        </div>
+        <div>
+          <img src="">
+          <h3>Coastal Rain 02</h3>
+          <!--Image favorite?-->
+          <p>1 999 NOK</p>
+        </div>
+        <div>
+          <img src="">
+          <h3>Coastal Rain 02</h3>
+          <!--Image favorite?-->
+          <p>1 999 NOK</p>
+        </div>
+      </section>
+      <section>
+        <h1>Get updates</h1>
+        <p>Sign up to our newsletter to receive updates straight to your inbox!</p>
+        <fieldset>
+          <label for="email">E-mail</label>
+          <input type="text" name="email">
+          <!--Button for sign up?-->
+        </fieldset>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <!--Må disse være i en liste?-->
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact and Help</a></li>
+        </ul> 
+      </div>
+      <div>
+        <a href="">Settings for cookies</a>
+        <a href="">Privacy & Policy</a>
+      </div>
+      <section>
+        <h2>Follow Rainydays</h2>
+        <a href=""><img src="images/facebook.png" alt="facebook logo"></a>
+        <a href=""><img src="images/instagram.png" alt="instagram logo"></a>
+      </section>
+    </footer>
   </body>
 </html>
  
