adjusted nav, added grid to images to place cta's

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </a>
     <label for="hamburger-menu" class="hamburger"><img src="images/menu.png" alt="hamburger menu"></label>
     <input type="checkbox" id="hamburger-menu">
-    <nav>
+    <nav class="flexbox">
       <ul>
         <li><a href="men.html">Men</a></li>
         <li><a href="men.html">Women</a></li>
         <li><a href="men.html">Unisex</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-      <ul>
+      <ul class="nav-icons">
         <li><a href="..."><img src="images/favorite.png" alt="favorite heart"> Favorite</a></li>
         <li><a href="..."><img src="images/shopping-bag.png" alt="shopping basket">Basket</a></li>
         <li><a href="..."><img src="images/login.png" alt="user">Profile</a></li>
@@ -34,15 +34,15 @@
     </nav>
     </header>
     <main>
-      <section class="container">
-        <div class="background-men">
-          <p><a class="cta" href="men.html">Shop Men</a></p>
+      <section class="container-shopnav">
+        <div class="item-shop-men wrapper">
+          <a class="cta bottom" href="men.html">Shop Men</a>
         </div>
-        <div class="background-men background-women">
-          <p><a class="cta" href="men.html">Shop Women</a></p>
+        <div class="item-shop-men item-shop-women wrapper">
+          <a class="cta bottom" href="men.html">Shop Women</a>
         </div>
       </section>
-      <section class="dark-background">
+      <section class="waterproof">
         <h1>100% waterproof</h1>
         <h2>High durability and comfort</h2>
         <p>Rainydays' jackets are coated to be sustain high amount of rain and snow, 
