nav, sections waterproof & subscribe,  products
nav adjusted with flexbox. Still some trouble with the container overflowing outside the page.

Sections waterproof and subscribe (get updates) now has a background and padding is added.

Product images is added.

--- a/index.html
+++ b/index.html
@@ -20,16 +20,31 @@
     <label for="hamburger-menu" class="hamburger"><img src="images/menu.png" alt="hamburger menu"></label>
     <input type="checkbox" id="hamburger-menu">
     <nav class="flexbox">
-      <ul>
+      <ul class="nav-text">
         <li><a href="men.html">Men</a></li>
         <li><a href="men.html">Women</a></li>
         <li><a href="men.html">Unisex</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
       <ul class="nav-icons">
-        <li><a href="..."><img src="images/favorite.png" alt="favorite heart"> Favorite</a></li>
-        <li><a href="..."><img src="images/shopping-bag.png" alt="shopping basket">Basket</a></li>
-        <li><a href="..."><img src="images/login.png" alt="user">Profile</a></li>
+        <li class="icon"><a href="...">
+          <figure>
+          <img src="images/favorite.png" alt="favorite heart">
+          <figcaption>Favorite</figcaption>
+          </figure>
+        </a></li>
+        <li class="icon"><a href="...">
+          <figure>
+          <img src="images/shopping-bag.png" alt="shopping basket">
+          <figcaption>Basket</figcaption>
+          </figure>
+        </a></li>
+        <li class="icon"><a href="...">
+          <figure>
+          <img src="images/login.png" alt="user">
+          <figcaption>Profile</figcaption>
+          </figure>
+        </a></li>
       </ul>
     </nav>
     </header>
@@ -49,28 +64,47 @@
           without loosing the comforting feel of wearing the jacket.</p>
         <a class="cta cta-light" href="about.html">Learn More</a>
       </section>
-      <section>
+      <section class="container-best-sellers">
         <h2>Best Sellers</h2>
         <div>
-          <img src="">
+          <img class="product-img" src="images/products/red.jpg">
           <h3>Coastal Rain 02</h3>
-          <!--Image favorite?-->
+          <p>All-weather jacket</p>
+          <img src="images/favorite-dark.png" alt="favorite heart">
           <p>1 999 NOK</p>
         </div>
         <div>
-          <img src="">
+          <img class="product-img" src="images/products/red.jpg">
           <h3>Coastal Rain 02</h3>
-          <!--Image favorite?-->
+          <p>-15%</p>
+          <p>All-weather jacket</p>
+          <img src="images/favorite-dark.png" alt="favorite heart">
+          <p>2 125 NOK</p>
+          <p>2 500 NOK</p>
+        </div>
+        <div>
+          <img class="product-img" src="images/products/red.jpg">
+          <h3>Coastal Rain 02</h3>
+          <p>All-weather jacket</p>
+          <img src="images/favorite-dark.png" alt="favorite heart">
           <p>1 999 NOK</p>
         </div>
         <div>
-          <img src="">
+          <img class="product-img" src="images/products/red.jpg">
           <h3>Coastal Rain 02</h3>
-          <!--Image favorite?-->
+          <p>All-weather jacket</p>
+          <img src="images/favorite-dark.png" alt="favorite heart">
+          <p>1 999 NOK</p>
+        </div>
+        <div>
+          <img class="product-img" src="images/products/red.jpg">
+          <h3>Coastal Rain 02</h3>
+          <p>All-weather jacket</p>
+          <img src="images/favorite-dark.png" alt="favorite heart">
           <p>1 999 NOK</p>
         </div>
       </section>
-      <section>
+      <section class="subscribe">
         <h1>Get updates</h1>
         <p>Sign up to our newsletter to receive updates straight to your inbox!</p>
         <fieldset>
