created product cards with grid

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
-    <header>
+    <header class="flexbox">
       <a href="index.html">
       <img src="images/logo.png" alt="rainydays logo" class="logo">
     </a>
@@ -66,21 +66,21 @@
       </section>
       <section class="container-best-sellers">
         <h2>Best Sellers</h2>
-        <div>
+        <div class="product-card">
           <img class="product-img" src="images/products/red.jpg">
-          <h3>Coastal Rain 02</h3>
-          <p>All-weather jacket</p>
-          <img src="images/favorite-dark.png" alt="favorite heart">
-          <p>1 999 NOK</p>
+          <h3 class="product-title">Coastal Rain 02</h3>
+          <p class="product-description">All-weather jacket</p>
+          <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
+          <p class="product-price">1 999 NOK</p>
         </div>
-        <div>
+        <div class="product-card">
           <img class="product-img" src="images/products/red.jpg">
-          <h3>Coastal Rain 02</h3>
-          <p>-15%</p>
-          <p>All-weather jacket</p>
-          <img src="images/favorite-dark.png" alt="favorite heart">
-          <p>2 125 NOK</p>
-          <p>2 500 NOK</p>
+          <h3 class="product-title">Coastal Rain 02</h3>
+          <p class="product-sale">-15%</p>
+          <p class="product-description">All-weather jacket</p>
+          <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
+          <p class="product-price">2 125 NOK</p>
+          <p class="product-old-price">2 500 NOK</p>
         </div>
         <div>
           <img class="product-img" src="images/products/red.jpg">
