nav fixed, styles.css cleaned
header and navigation: responsive over different widths, fixed the problem of the layout stretching outside the page.

styles.css has had a clean up where unecessary code is removed.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
   </head>
   <body>
     <header class="flexbox">
-      <a href="index.html">
+      <a class="logo-home"href="index.html">
       <img src="images/logo.png" alt="rainydays logo" class="logo">
     </a>
-    <label for="hamburger-menu" class="hamburger"><img src="images/menu.png" alt="hamburger menu"></label>
-    <input type="checkbox" id="hamburger-menu">
+    
     <nav class="flexbox">
       <ul class="nav-text">
         <li><a href="men.html">Men</a></li>
@@ -33,7 +32,7 @@
           <figcaption>Favorite</figcaption>
           </figure>
         </a></li>
-        <li class="icon"><a href="...">
+        <li class="icon-basket"><a href="...">
           <figure>
           <img src="images/shopping-bag.png" alt="shopping basket">
           <figcaption>Basket</figcaption>
@@ -47,6 +46,8 @@
         </a></li>
       </ul>
     </nav>
+    <label for="hamburger-menu" class="hamburger"><img src="images/menu.png" alt="hamburger menu"></label>
+    <input type="checkbox" id="hamburger-menu">
     </header>
     <main>
       <section class="container-shopnav">
@@ -64,8 +65,8 @@
           without loosing the comforting feel of wearing the jacket.</p>
         <a class="cta cta-light" href="about.html">Learn More</a>
       </section>
+      <h2 id="title-best-seller">Best Sellers</h2>
       <section class="container-best-sellers">
-        <h2>Best Sellers</h2>
         <div class="product-card">
           <img class="product-img" src="images/products/red.jpg">
           <h3 class="product-title">Coastal Rain 02</h3>
@@ -82,26 +83,26 @@
           <p class="product-price">2 125 NOK</p>
           <p class="product-old-price">2 500 NOK</p>
         </div>
-        <div>
+        <div class="product-card">
           <img class="product-img" src="images/products/red.jpg">
-          <h3>Coastal Rain 02</h3>
-          <p>All-weather jacket</p>
-          <img src="images/favorite-dark.png" alt="favorite heart">
-          <p>1 999 NOK</p>
+          <h3 class="product-title">Coastal Rain 02</h3>
+          <p class="product-description">All-weather jacket</p>
+          <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
+          <p class="product-price">1 999 NOK</p>
         </div>
-        <div>
+        <div class="product-card">
           <img class="product-img" src="images/products/red.jpg">
-          <h3>Coastal Rain 02</h3>
-          <p>All-weather jacket</p>
-          <img src="images/favorite-dark.png" alt="favorite heart">
-          <p>1 999 NOK</p>
+          <h3 class="product-title">Coastal Rain 02</h3>
+          <p class="product-description">All-weather jacket</p>
+          <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
+          <p class="product-price">1 999 NOK</p>
         </div>
-        <div>
+        <div class="product-card">
           <img class="product-img" src="images/products/red.jpg">
-          <h3>Coastal Rain 02</h3>
-          <p>All-weather jacket</p>
-          <img src="images/favorite-dark.png" alt="favorite heart">
-          <p>1 999 NOK</p>
+          <h3 class="product-title">Coastal Rain 02</h3>
+          <p class="product-description">All-weather jacket</p>
+          <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
+          <p class="product-price">1 999 NOK</p>
         </div>
       </section>
       <section class="subscribe">
