hover effects added, icon size changed

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
           without loosing the comforting feel of wearing the jacket.</p>
         <a class="cta cta-light" href="about.html">Learn More</a>
       </section>
-      <h2 id="title-best-seller">Best Sellers</h2>
-      <section class="container-best-sellers">
+      <section class="bestsellers">
+        <h2 id="title-best-seller">Best Sellers</h2>
+        <div class="container-best-sellers">
         <div class="product-card">
           <img class="product-img" src="images/products/red.jpg">
           <h3 class="product-title">Coastal Rain 02</h3>
@@ -104,6 +105,7 @@
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
           <p class="product-price">1 999 NOK</p>
         </div>
+      </div>
       </section>
       <section class="subscribe">
         <h1>Get updates</h1>
@@ -111,7 +113,7 @@
         <fieldset>
           <label for="email">E-mail</label>
           <input type="text" name="email">
-          <!--Button for sign up?-->
+          <button type="button">Sign Up</button>
         </fieldset>
       </section>
     </main>
