subscribe section & footer styled
Link and hover effect also added to product img

--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
         <h2 id="title-best-seller">Best Sellers</h2>
         <div class="container-best-sellers">
         <div class="product-card">
-          <img class="product-img" src="images/products/red.jpg">
-          <h3 class="product-title">Coastal Rain 02</h3>
+          <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
+          <a class="product-title" href="/"><h3>Coastal Rain 02</h3></a>
           <p class="product-description">All-weather jacket</p>
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
           <p class="product-price">1 999 NOK</p>
         </div>
         <div class="product-card">
-          <img class="product-img" src="images/products/red.jpg">
-          <h3 class="product-title">Coastal Rain 02</h3>
+          <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
+          <a class="product-title" href="/"><h3>Coastal Rain 02</h3></a>
           <p class="product-sale">-15%</p>
           <p class="product-description">All-weather jacket</p>
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -85,22 +85,22 @@
           <p class="product-old-price">2 500 NOK</p>
         </div>
         <div class="product-card">
-          <img class="product-img" src="images/products/red.jpg">
-          <h3 class="product-title">Coastal Rain 02</h3>
+          <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
+          <a class="product-title" href="/"><h3>Coastal Rain 02</h3></a>
           <p class="product-description">All-weather jacket</p>
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
           <p class="product-price">1 999 NOK</p>
         </div>
         <div class="product-card">
-          <img class="product-img" src="images/products/red.jpg">
-          <h3 class="product-title">Coastal Rain 02</h3>
+          <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
+          <a class="product-title" href="/"><h3>Coastal Rain 02</h3></a>
           <p class="product-description">All-weather jacket</p>
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
           <p class="product-price">1 999 NOK</p>
         </div>
         <div class="product-card">
-          <img class="product-img" src="images/products/red.jpg">
-          <h3 class="product-title">Coastal Rain 02</h3>
+          <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
+          <a class="product-title" href="/"><h3>Coastal Rain 02</h3></a>
           <p class="product-description">All-weather jacket</p>
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
           <p class="product-price">1 999 NOK</p>
@@ -110,29 +110,30 @@
       <section class="subscribe">
         <h1>Get updates</h1>
         <p>Sign up to our newsletter to receive updates straight to your inbox!</p>
-        <fieldset>
+        <form>
           <label for="email">E-mail</label>
-          <input type="text" name="email">
-          <button type="button">Sign Up</button>
-        </fieldset>
+          <input type="email" name="email">
+          <button class="dark-button" type="button">Sign Up</button>
+        </form>
       </section>
     </main>
-    <footer>
-      <div>
+    <footer class="larger">
+      <div class="footer-links">
         <!--Må disse være i en liste?-->
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact and Help</a></li>
         </ul> 
       </div>
-      <div>
-        <a href="">Settings for cookies</a>
-        <a href="">Privacy & Policy</a>
+      <div class="footer-settings">
+        <ul>
+        <li><a href="/">Settings for cookies</a></li>
+        <li><a href="/">Privacy & Policy</a></li>
       </div>
-      <section>
+      <section class="footer-social">
         <h2>Follow Rainydays</h2>
-        <a href=""><img src="images/facebook.png" alt="facebook logo"></a>
-        <a href=""><img src="images/instagram.png" alt="instagram logo"></a>
+        <a href="/"><img src="images/facebook.png" alt="facebook logo"></a>
+        <a href="/"><img src="images/instagram.png" alt="instagram logo"></a>
       </section>
     </footer>
   </body>
