cleaned up html and css
removed classes from the html that where not being used

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
         <li><a href="men.html">Unisex</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-      <ul class="nav-icons">
-        <li class="icon"><a href="...">
+      <ul>
+        <li class="icon"><a href="/">
           <figure>
           <img src="images/favorite.png" alt="favorite heart">
           <figcaption>Favorite</figcaption>
           </figure>
         </a></li>
-        <li class="icon-basket"><a href="...">
+        <li><a href="/">
           <figure>
           <img src="images/shopping-bag.png" alt="shopping basket">
           <figcaption>Basket</figcaption>
           </figure>
         </a></li>
-        <li class="icon"><a href="...">
+        <li class="icon"><a href="/">
           <figure>
           <img src="images/login.png" alt="user">
           <figcaption>Profile</figcaption>
@@ -66,7 +66,7 @@
         <a class="cta cta-light" href="about.html">Learn More</a>
       </section>
       <section class="bestsellers">
-        <h2 id="title-best-seller">Best Sellers</h2>
+        <h2>Best Sellers</h2>
         <div class="container-best-sellers">
         <div class="product-card">
           <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
@@ -117,9 +117,8 @@
         </form>
       </section>
     </main>
-    <footer class="larger">
+    <footer>
       <div class="footer-links">
-        <!--Må disse være i en liste?-->
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact and Help</a></li>
