--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="flexbox">
       <a class="logo-home"href="index.html">
-      <img src="images/logo.png" alt="rainydays logo" class="logo">
+      <img src="images/header&footer/logo.png" alt="rainydays logo" class="logo">
     </a>
     
     <nav class="flexbox">
@@ -28,25 +28,25 @@
       <ul>
         <li class="icon"><a href="/">
           <figure>
-          <img src="images/favorite.png" alt="favorite heart">
+          <img src="images/header&footer/favorite.png" alt="favorite heart">
           <figcaption>Favorite</figcaption>
           </figure>
         </a></li>
         <li><a href="/">
           <figure>
-          <img src="images/shopping-bag.png" alt="shopping basket">
+          <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
           <figcaption>Basket</figcaption>
           </figure>
         </a></li>
         <li class="icon"><a href="/">
           <figure>
-          <img src="images/login.png" alt="user">
+          <img src="images/header&footer/login.png" alt="user">
           <figcaption>Profile</figcaption>
           </figure>
         </a></li>
       </ul>
     </nav>
-    <label for="hamburger-menu" class="hamburger"><img src="images/menu.png" alt="hamburger menu"></label>
+    <label for="hamburger-menu" class="hamburger"><img src="images/header&footer/menu.png" alt="hamburger menu"></label>
     <input type="checkbox" id="hamburger-menu">
     </header>
     <main>
@@ -131,8 +131,8 @@
       </div>
       <section class="footer-social">
         <h2>Follow Rainydays</h2>
-        <a href="/"><img src="images/facebook.png" alt="facebook logo"></a>
-        <a href="/"><img src="images/instagram.png" alt="instagram logo"></a>
+        <a href="/"><img src="images/header&footer/facebook.png" alt="facebook logo"></a>
+        <a href="/"><img src="images/header&footer/instagram.png" alt="instagram logo"></a>
       </section>
     </footer>
   </body>
