--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!--All images are from unsplash.com-->
+<!--All icons are from Carbon pack in the Auto Icon plugin in XD License: Apache 2.0-->
 <html>
   <head>
     <meta charset="utf-8">
