index.html & styles.css
changed product cards into one link, added styling

--- a/index.html
+++ b/index.html
@@ -70,47 +70,47 @@
       <section class="bestsellers">
         <h2>Best Sellers</h2>
         <div class="container-best-sellers">
-        <div class="product-card">
-          <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
-          <a class="product-title" href="/"><h3>Coastal Rain 02</h3></a>
+          <a class="product-card" href="/">
+          <img class="product-img" src="images/products/red.jpg" alt="Man with Red Rain jacket">
+          <h3 class="product-title">Coastal Rain 02</h3>
           <p class="product-description">All-weather jacket</p>
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
           <p class="product-price">1 999 NOK</p>
-        </div>
-        <div class="product-card">
-          <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
-          <a class="product-title" href="/"><h3>Coastal Rain 02</h3></a>
+          </a>
+        <a class="product-card" href="/">
+          <img class="product-img" src="images/products/red.jpg" alt="Man with Red Rain jacket">
+          <h3 class="product-title">Coastal Rain 02</h3>
           <p class="product-sale">-15%</p>
           <p class="product-description">All-weather jacket</p>
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
           <p class="product-price">2 125 NOK</p>
           <p class="product-old-price">2 500 NOK</p>
-        </div>
-        <div class="product-card">
-          <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
-          <a class="product-title" href="/"><h3>Coastal Rain 02</h3></a>
+        </a>
+        <a class="product-card" href="/">
+          <img class="product-img" src="images/products/red.jpg" alt="Man with Red Rain jacket">
+          <h3 class="product-title">Coastal Rain 02</h3>
           <p class="product-description">All-weather jacket</p>
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
           <p class="product-price">1 999 NOK</p>
-        </div>
-        <div class="product-card">
-          <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
-          <a class="product-title" href="/"><h3>Coastal Rain 02</h3></a>
+          </a>
+        <a class="product-card" href="/">
+          <img class="product-img" src="images/products/red.jpg" alt="Man with Red Rain jacket">
+          <h3 class="product-title">Coastal Rain 02</h3>
           <p class="product-description">All-weather jacket</p>
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
           <p class="product-price">1 999 NOK</p>
-        </div>
-        <div class="product-card">
-          <a class="product-img" href="/"><img src="images/products/red.jpg"></a>
-          <a class="product-title" href="/"><h3>Coastal Rain 02</h3></a>
+          </a>
+        <a class="product-card" href="/">
+          <img class="product-img" src="images/products/red.jpg" alt="Man with Red Rain jacket">
+          <h3 class="product-title">Coastal Rain 02</h3>
           <p class="product-description">All-weather jacket</p>
           <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
           <p class="product-price">1 999 NOK</p>
-        </div>
+          </a>
       </div>
       </section>
       <section class="subscribe">
-        <h1>Get updates</h1>
+        <h2>Get updates</h2>
         <p>Sign up to our newsletter to receive updates straight to your inbox!</p>
         <form>
           <label for="email">E-mail</label>
