index, men.html and styles
added filter section to jacket list (men.html)
added a page for unisex and women with the same content as men.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <a class="cta bottom" href="men.html">Shop Men</a>
         </div>
         <div class="item-shop-men item-shop-women wrapper">
-          <a class="cta bottom" href="men.html">Shop Women</a>
+          <a class="cta bottom" href="women.html">Shop Women</a>
         </div>
       </section>
       <section class="waterproof">
