--- a/women.html
+++ b/women.html
@@ -42,8 +42,8 @@
       <label for="hamburger-menu" class="hamburger"><img src="images/header&footer/menu.png" alt="hamburger menu"></label>
       <label for="hamburger-menu" class="close"><img src="images/header&footer/close.png" alt="close"></label>
         <ul class="nav-text">
-          <li class="active"><a href="men.html">Men</a></li>
-          <li><a href="women.html">Women</a></li>
+          <li><a href="men.html">Men</a></li>
+          <li class="active"><a href="women.html">Women</a></li>
           <li><a href="unisex.html">Unisex</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -60,9 +60,9 @@
           <div class="breadcrumbs">
             <a href="index.html">Home</a>
             >
-            <a href="men.html" class="current-breadcrumbs">Men</a>
+            <a href="women.html" class="current-breadcrumbs">Women</a>
         </div>
-        <h1>Men</h1>
+        <h1>Women</h1>
         </section>
         <section class="container-product-filter">
         <button class="dark-button filter">Filter</button>
