styles, index, men, jacket-specific
men.html and index.html : added links to jacket-specific.html

jacket-specific.html : begun to work on image slideshow

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
         <section class="product-section"> 
           <div class="product-card">
               <div class="product-image">
-                  <a href="/"><img src="/images/products/red.jpg"></a>
+                  <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
               </div>
               <div class="product-info">
                   <div class="product-name">
-                  <a href="/"><h3>Coastal Rain 02</h3>
+                  <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                   <h4>All-weather jacket</h4> 
                   </a>
                   <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -96,11 +96,11 @@
           </div>
           <div class="product-card">
               <div class="product-image">
-                  <a href="/"><img src="/images/products/red.jpg"></a>
+                  <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
               </div>
               <div class="product-info">
                   <div class="product-name">
-                  <a href="/"><h3>Coastal Rain 02</h3>
+                  <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                   <h4>All-weather jacket</h4> 
                   </a>
                   <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -110,11 +110,11 @@
           </div>
           <div class="product-card">
               <div class="product-image">
-                  <a href="/"><img src="/images/products/red.jpg"></a>
+                  <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
               </div>
               <div class="product-info">
                   <div class="product-name">
-                  <a href="/"><h3>Coastal Rain 02</h3>
+                  <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                   <h4>All-weather jacket</h4> 
                   </a>
                   <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -124,11 +124,11 @@
           </div>
           <div class="product-card">
               <div class="product-image">
-                  <a href="/"><img src="/images/products/red.jpg"></a>
+                  <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
               </div>
               <div class="product-info">
                   <div class="product-name">
-                  <a href="/"><h3>Coastal Rain 02</h3>
+                  <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                   <h4>All-weather jacket</h4> 
                   </a>
                   <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
