--- a/men.html
+++ b/men.html
@@ -111,11 +111,11 @@
         <section class="product-section"> 
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -129,11 +129,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -143,11 +143,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -157,11 +157,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -171,11 +171,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -185,11 +185,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -199,11 +199,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -213,11 +213,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
