jacket-specific, styles
worked more on slideshow for jacket-specific page.

--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -66,39 +66,35 @@
           </section>
           <section class="slideshow">
               <div class="slide-wrapper">
-                 <ol class="slideshow-slides">
+                 <ol class="slideshow-view">
                      <li id="slide1" class="slideshow-slide">
                         <div class="slideshow-snapper">
+                            <img src="/images/products/red.jpg" class="slide-img">
                             <a href="#slide3" 
-                            class="slide-prev">go to last slide</a> 
+                            class="slide-prev"><img src="/images/products/chevron-left.png" alt="left arrow"></a> 
+                            
                             <a href="#slide2" 
-                            class="slide-nex">go to next slide</a> 
+                            class="slide-next"><img src="/images/products/chevron-right.png" alt="right arrow"></a> 
                         </div>
                     </li>
                     <li id="slide2" class="slideshow-slide">
                         <div class="slideshow-snapper">
                             <a href="#slide1" 
-                            class="slide-prev">go to last slide</a> 
+                            class="slide-prev"><img src="/images/products/chevron-left.png" alt="left arrow"></a> 
                             <a href="#slide3" 
-                            class="slide-nex">go to next slide</a> 
+                            class="slide-next"><img src="/images/products/chevron-right.png" alt="right arrow"></a> 
                         </div>
                     </li>
                     <li id="slide3" class="slideshow-slide">
                         <div class="slideshow-snapper">
                             <a href="#slide2" 
-                            class="slide-prev">go to last slide</a> 
+                            class="slide-prev"><img src="/images/products/chevron-left.png" alt="left arrow"></a> 
                             <a href="#slide1" 
-                            class="slide-nex">go to next slide</a> 
+                            class="slide-next"><img src="/images/products/chevron-right.png" alt="right arrow"></a> 
                         </div>
                     </li>
                  </ol>
                 </div>
-
-                <div class="navigation-manual">
-                    <button class="slider-button"><img src="/images/products/chevron-left.png" alt="arrow left"></button>
-                    <button class="slider-button"><img src="/images/products/chevron-right.png" alt="arrow right"></button>
-                </div>
-            </div>
           </section>
     </main>
     <footer>
