jacket-specific and styles
added radio list for color choices

--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -69,7 +69,7 @@
                  <ol class="slideshow-view">
                      <li id="slide1" class="slideshow-slide">
                         <div class="slideshow-snapper">
-                            <img src="/images/products/red.jpg" class="slide-img">
+                            <img src="/images/products/red.jpg" alt="man with red jacket" class="slide-img">
                             <a href="#slide3" 
                             class="slide-prev"><img src="/images/products/chevron-left.png" alt="left arrow"></a> 
                             
@@ -79,6 +79,7 @@
                     </li>
                     <li id="slide2" class="slideshow-slide">
                         <div class="slideshow-snapper">
+                            <img src="/images/products/red2.jpg" alt="man with red jacket, smiling with crossed arms" class="slide-img">
                             <a href="#slide1" 
                             class="slide-prev"><img src="/images/products/chevron-left.png" alt="left arrow"></a> 
                             <a href="#slide3" 
@@ -87,6 +88,7 @@
                     </li>
                     <li id="slide3" class="slideshow-slide">
                         <div class="slideshow-snapper">
+                            <img src="/images/products/red3.jpg" alt="man with red jacket walking toward the coast" class="slide-img">
                             <a href="#slide2" 
                             class="slide-prev"><img src="/images/products/chevron-left.png" alt="left arrow"></a> 
                             <a href="#slide1" 
@@ -95,6 +97,43 @@
                     </li>
                  </ol>
                 </div>
+          </section>
+          <section class="jacket-info">
+            <div class="jacket-name">
+            <h1>Coastal Rain 02</h1>
+            <h2>1 999 NOK</h2>
+            </div>
+            <div class="color">
+                <div class="chosen">
+                    <p>Color</p>
+                </div>
+                <div class="radio-colors">
+                    <ul>
+                        <li>
+                            <input type="radio" name="color" value="red">
+                            <label><span class="color-swatch" id="color-swatch-red"></span>red</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="color" value="yellow">
+                            <label><span class="color-swatch" id="color-swatch-yellow"></span>yellow</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="color" value="blue">
+                            <label><span class="color-swatch" id="color-swatch-blue"></span>blue</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="color" value="green">
+                            <label><span class="color-swatch" id="color-swatch-green"></span>green</label>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="size">
+
+            </div>
+            <div class="add-to-cart">
+
+            </div>
           </section>
     </main>
     <footer>
