jacket-specific.html and styles.css
cleaned up css, added add to cart interaction, added jacket info.

--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -48,7 +48,7 @@
           <li><a href="about.html">About</a></li>
         </ul>
       </nav>
-      </header>   
+      </header>  
     <main>
         <section class="search-container"><form class="search">
             <input type="text" placeholder="Search"/>
@@ -164,14 +164,16 @@
             </div>
             <div class="add-to-cart">
                 <input type="checkbox" id="add-to-cart">
-                <label for="add-to-cart" class="cta cta-add-to-cart">Add to cart</label>
+                <label for="add-to-cart" class="cta cta-add-to-cart"></label>
+                <div class="container-to-cart">
+                </div>
             </div>
         </div>
           
               <div class="product-description">
                 
                 <input type="checkbox" id="description">
-                <label for="description" id="h2"><h2>Description</h2></label>
+                <label for="description" id="h2-description"><h2>Description</h2></label>
                 <p id="description-info"> Walking (also known as ambulation) is one of the main gaits of terrestrial 
                       locomotion among legged animals. Walking is typically slower than running 
                       and other gaits. </p>
@@ -179,7 +181,7 @@
               </div>
               <div class="product-description">
                 <input type="checkbox" id="size-guide">
-                <label for="size-guide" id="h2"><h2>Size guide and fitting</h2></label>
+                <label for="size-guide" id="h2-size"><h2>Size guide and fitting</h2></label>
                 <p id="size-info">Here is a table of measurements for the different sizes.</p>
               </div>
           </section>
