html files added and styled
Forgot to log changes for a while.
New html pages created and mostly styled:
about.html
checkout.html
checkout-succes.html
contact.html
about.html

Added links to the new pages from the old pages.

--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -19,7 +19,7 @@
       </a>
       <nav class="flexbox">
         <ul id="icons">
-          <li><a href="/">
+          <li><a href="checkout.html">
             <figure>
             <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
             <figcaption>Basket</figcaption>
