--- a/men.html
+++ b/men.html
@@ -19,7 +19,7 @@
       </a>
       <nav class="flexbox">
         <ul id="icons">
-          <li><a href="/">
+          <li><a href="checkout.html">
             <figure>
             <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
             <figcaption>Basket</figcaption>
@@ -97,15 +97,7 @@
                         <label for="green">Green</label></li>
                     </ul>
                     </div>
-            </div>
-            <!-- <div class="sort">
-            <label>Sort by:</label>
-            <select>
-                <option value="/">Featured</option>
-                <option value="/">Lowest price</option>
-                <option value="/">Highest price</option>
-            </select>
-        </div> -->
+                </div>
     
        
         <section class="product-section"> 
