--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </a>
     <nav class="flexbox">
       <ul id="icons">
-        <li><a href="/">
+        <li><a href="checkout.html">
           <figure>
           <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
           <figcaption>Basket</figcaption>
