--- a/checkout.html
+++ b/checkout.html
@@ -99,7 +99,7 @@
                     <p>Shipping</p>
                     <p>69 NOK</p>
                     </div>
-                    <div class="p-two-columns">
+                    <div class="p-two-columns total">
                     <p>Total sum (including 25% vat.) </p>
                     <p>2 068 NOK</p>
                     </div>
@@ -176,9 +176,10 @@
                     </li>
                     </div>
                 </ul>
+                <a href="checkout-success.html"><button class="cta">Pay</button>
+                </a>
             </form>
-            <a href="checkout-success.html"><button class="cta">Pay</button>
-            </a>
+            
           </div>
           </section>
     </main>
