--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -89,7 +89,7 @@
                     </li>
                     <li id="slide3" class="slideshow-slide">
                         <div class="slideshow-snapper">
-                            <img src="/images/products/red3.jpg" alt="man with red jacket walking toward the coast" class="slide-img-red3">
+                            <img src="/images/products/red3.jpg" alt="man with red jacket walking toward the coast" class="slide-img">
                             <a href="#slide2" 
                             class="slide-prev"><img src="/images/products/chevron-left.png" alt="left arrow"></a> 
                             <a href="#slide1" 
